force-app/main/default/objects/Competitors_Information__c/Competitors_Information__c.object-meta.xml
<CustomObject>
    <description>阿根廷巡店日报竞品信息表</description>
    <label>Competitors Information</label>
    <nameField>
        <displayFormat>CI-{YYYY}{00000}</displayFormat>
        <label>Competitors Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>