force-app/main/default/objects/Competitors_Information__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Competitor Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_line__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARISTON</fullName>
            </value>
            <value>
                <fullName>ATMA</fullName>
            </value>
            <value>
                <fullName>BGH</fullName>
            </value>
            <value>
                <fullName>BOSCH</fullName>
            </value>
            <value>
                <fullName>CANDY</fullName>
            </value>
            <value>
                <fullName>DREAN</fullName>
            </value>
            <value>
                <fullName>ELECTROLUX</fullName>
            </value>
            <value>
                <fullName>FLORENCIA</fullName>
            </value>
            <value>
                <fullName>GAFA</fullName>
            </value>
            <value>
                <fullName>HITACHI</fullName>
            </value>
            <value>
                <fullName>JBL</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>LILIANA</fullName>
            </value>
            <value>
                <fullName>LONGVIE</fullName>
            </value>
            <value>
                <fullName>MIDEA</fullName>
            </value>
            <value>
                <fullName>NOBLEX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PATRICK</fullName>
            </value>
            <value>
                <fullName>PEABODY</fullName>
            </value>
            <value>
                <fullName>PHILCO</fullName>
            </value>
            <value>
                <fullName>PHILIPS</fullName>
            </value>
            <value>
                <fullName>SAMSUNG</fullName>
            </value>
            <value>
                <fullName>SURREY</fullName>
            </value>
            <value>
                <fullName>TCL</fullName>
            </value>
            <value>
                <fullName>WHIRLPOOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>