force-app/main/default/objects/Competitors_Information__c/fields/Daily_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Inspection_Report__c</fullName>
    <label>Daily Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Competitors Information</relationshipLabel>
    <relationshipName>Competitors_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>