force-app/main/default/objects/Competitors_Information__c/fields/Demo_Video__c.field-meta.xml
<CustomField>
    <fullName>Demo_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Video</label>
    <type>Checkbox</type>
</CustomField>