force-app/main/default/objects/Competitors_Information__c/fields/Display_Stand__c.field-meta.xml
<CustomField>
    <fullName>Display_Stand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Rack</label>
    <type>Checkbox</type>
</CustomField>