force-app/main/default/objects/Competitors_Information__c/fields/Display_Status__c.field-meta.xml
<CustomField>
    <fullName>Display_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Status</label>
    <type>Checkbox</type>
</CustomField>