force-app/main/default/objects/Competitors_Information__c/fields/Product_line__c.field-meta.xml
<CustomField>
    <fullName>Product_line__c</fullName>
    <label>Product line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Laser TV</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Sound Bar</fullName>
            </value>
            <value>
                <fullName>Small Domestic Home Appliances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>