force-app/main/default/objects/Competitors_Information__c/fields/Quantity_Of_Exhibits__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Exhibits__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>